[WGSL] Generated switch statements are missing 'break' after each case https://bugs.webkit.org/show_bug.cgi?id=264208 rdar://117947313

Reviewed by Mike Wyrzykowski.

As the title says, the code generation for switch statements was missing a break
at the end of each case.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/270327@main